--- a/Brouillons/Romain/4e - Index mensuel.ipynb
+++ b/Brouillons/Romain/4e - Index mensuel.ipynb
@@ -280,6 +280,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Début : les indices ont été calculés"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
