--- a/Redaction/Rapport_Final/Rapport.tex
+++ b/Redaction/Rapport_Final/Rapport.tex
@@ -84,31 +84,69 @@ sous l'encadrement de Benjamin Muller (Inria)}
 
 {
 \hypersetup{linkcolor=black}
-\setcounter{tocdepth}{3}
+\setcounter{tocdepth}{2}
 \tableofcontents
 }
+\hypertarget{introduction}{%
+\section*{Introduction}\label{introduction}}
+\addcontentsline{toc}{section}{Introduction}
+
+Grâce à l'évolution des méthodes d'apprentissage profond (\emph{Deep Learning}), l'appréhension du langage naturel est aujourd'hui devenu une discipline à part entière (\emph{Natural Language Processing}).
+Ce succès s'explique en partie grâce à l'émergence de techniques non supervisées d'apprentissage de représentation de structures linguistiques.
+Les méthodes de \emph{word embedding} (« plongement lexical » en français) permettent de représenter chaque mot d'un dictionnaire par un vecteur de nombres réels afin que les mots qui apparaissant dans des contextes similaires possèdent des vecteurs correspondants qui sont relativement proches.
+Les modèles \textbf{word2vec}, développés par une équipe de recherche chez Google (\cite{Mikolov}), sont parmi les plus célèbres et sont ceux sur lesquels se concentrera notre projet.
+
+Dans ce projet de statistiques appliquées, nous étudierons dans un premier temps en détail et implémenterons le modèle \emph{word2vec} (Partie \ref{sec:word2vec}). Dans un deuxième temps, nous évaluerons la validité du modèle implémenté et l'appliquerons sur une base de données composée de plusieurs millions de tweets publiés en France entre 2013 et 2017 (Partie \ref{sec:evaluation}). Enfin, nous mobiliserons des techniques d'analyse de sentiments afin de créer des indicateurs qui pourront être comparés aux indicateurs produits dans la statistique publique, en particulier concernant l'opinion des ménages (Partie \ref{sec:sentimentalAnalysis}).
+
 \hypertarget{sec:word2vec}{%
 \section{\texorpdfstring{Implémentation du modèle \emph{Word2Vec}}{Implémentation du modèle Word2Vec}}\label{sec:word2vec}}
 
-\hypertarget{le-moduxe8le-word2vec-un-moduxe8le-de-word-embedding-kim}{%
-\subsection{\texorpdfstring{Le modèle \emph{Word2vec}, un modèle de \emph{word-embedding} {[}Kim{]}}{Le modèle Word2vec, un modèle de word-embedding {[}Kim{]}}}\label{le-moduxe8le-word2vec-un-moduxe8le-de-word-embedding-kim}}
+\hypertarget{le-moduxe8le-word2vec-un-moduxe8le-de-word-embedding}{%
+\subsection{\texorpdfstring{Le modèle \emph{Word2vec}, un modèle de \emph{word-embedding}}{Le modèle Word2vec, un modèle de word-embedding}}\label{le-moduxe8le-word2vec-un-moduxe8le-de-word-embedding}}
 
-\hypertarget{lalgorithme-skip-gram-alain}{%
-\subsection{L'algorithme Skip-Gram {[}Alain{]}}\label{lalgorithme-skip-gram-alain}}
+Le « Natural Language Processing » (NLP ou « traitement automatique du langage naturel ») est une branche de \emph{machine learning} visant à analyser, traiter et reproduire le langage humain. Les modèles de NLP \emph{Word2Vec}, développés par une équipe de recherche chez Google (\cite{Mikolov}), sont parmi les plus célèbres et utilisent le \emph{word-embedding} --- plongement lexical en français.
 
-Le modèle \emph{Word2Vec} est une des méthodes de machine learning utilisée pour faire du \emph{word embedding} --- plongement lexical.
-Elle permet de représenter, de manière vectorielle, l'ensemble des mots d'un corpus.
-Ainsi, les mots qui apparaissent dans des contextes similaires (par exemple «~bonjour~» et «~tsalut~») seront représentés par des vecteurs relativement proches.
-L'objectif de cette partie est de décrire le fonctionnement de cet algorithme.
+\hypertarget{historique-de-la-suxe9mantique-vectorielle-uxe0-word2vec}{%
+\subsubsection{\texorpdfstring{Historique : de la sémantique vectorielle à \emph{Word2Vec}}{Historique : de la sémantique vectorielle à Word2Vec}}\label{historique-de-la-suxe9mantique-vectorielle-uxe0-word2vec}}
 
-Deux architectures du modèles \emph{Word2Vec} existent (voir graphique \ref{fig:cbowskipgram}) :
+La « sémantique vectorielle » est née dans les années 1950\footnote{L'ouvrage \cite{Jurafsky} permet de retracer avec une grande richesse l'évolution des méthodes de NLP.} . C'est une méthode algébrique de représentation d'un document visant à réaliser des tâches diverses (détecter le plagiat, filtrer des articles, \dots). Il est alors nécessaire de capter de nombreux types de proximités entre mots : les synonymes (automobile / voiture), antonymes (froid / chaud), connotations positives VS négatives (heureux / triste), etc.
+
+Un modèle répondant à ces exigences ne peut exister. Pour y répondre au mieux, la sémantique vectorielle puise son inspiration des travaux linguistiques des années 1950 et en particulier de l' « hypothèse de distribution » selon laquelle un mot se définit par son environnement, dit autrement : les mots qui se produisent dans un contexte identique tendent à avoir des significations similaires\footnote{Comme l'a écrit le linguiste britannique John Rupert Firth en 1957, « Vous connaîtrez un mot par ses fréquentations. »}.
+
+Les premiers modèles sémantiques\footnote{comme le \emph{term frequency-inverse document frequency} (TF-IDF)} représentaient les relations entre mots grâce à des très grandes matrices dont les dimensions correspondaient à la taille du vocabulaire (contenant donc beaucoup de 0 et dites « sparses »). Les méthodes de \emph{word-embedding} qui sont ensuite apparus ont permis de représenter chaque mot d'un dictionnaire par un vecteur de nombres réels denses (peu de 0) de plus faible dimension (en général entre 50 et 1000). Si la réduction de dimension rend les vecteurs-mots moins facilement interprétables, elle a pour grand avantage de faciliter et d'accélérer les tâches d'apprentissage impliquant ces mots.
+
+\cite{Mikolov} ont mis en avant en 2013 les méthodes de \emph{word-embedding} à travers la création de \emph{Word2Vec}. Ce modèle de réseaux de neurones\footnote{C'est l'article \cite{Bengio} qui a introduit dix ans avant \emph{Word2Vec} le premier modèle d'apprentissage de représentation de vecteurs-mots à partir d'un réseau de neurone simple.} à deux couches est rapidement devenu une référence grâce à la grande précision des résultats qu'il permet d'obtenir, étant entraîné en un temps record sur un corpus très volumineux.
+
+\hypertarget{word2vec-un-moduxe8le-dapprentissage-auto-supervisuxe9}{%
+\subsubsection{\texorpdfstring{\emph{Word2Vec}, un modèle d'apprentissage « auto-supervisé »}{Word2Vec, un modèle d'apprentissage « auto-supervisé »}}\label{word2vec-un-moduxe8le-dapprentissage-auto-supervisuxe9}}
+
+Pour rappel, en sortie du modèle \emph{Word2Vec}, chaque mot est représenté par un vecteur dont la dimension est fixée par la valeur d'un hyperparamètre. Les mots qui apparaissent dans des contextes similaires (« bonjour » et « salut » par exemple) seront représentés par des vecteurs relativement proches dans l'espace vectoriel de définition de ces vecteurs. Dans la même logique, \emph{Word2Vec} permet également de réaliser des opérations vectorielles, comme dans l'exemple, souvent cité : \(\overrightarrow{Paris} - \overrightarrow{France} + \overrightarrow{Italie} = \overrightarrow{Rome}\) qui provient de \cite{Mikolov}.
+
+Pour transformer chaque mot en un vecteur, au lieu de simplement compter les fréquences d'apparition de certains mots \textbf{« contextes »} \textbf{voisins} d'un mot \textbf{« cible »}\footnote{comme dans les premiers modèles sémantiques dits « sparses »}, nous entraînons un réseau de neurones sur une tâche annexe : on construit un classifieur dont la tâche de prédiction est binaire et répond à la question « Est-ce que ce mot contexte est susceptible d'être voisin du mot cible ? ». La prédiction en elle-même ne nous intéresse pas, c'est plutôt le poids du classifieur en sortie du modèle qui correspondra aux \emph{word-embeddings}.
+
+Les voisins d'un mot cible reposent sur un hyperparamètre : la fenêtre (window ou \(w\)). Pour \(w = n\), les voisins du mot cible sont les \(n\) mots précédents et les \(n\) mots suivants dans la phrase. Par exemple, dans la phrase :
+
+\begin{quote}
+\LARGE \textbf{``}\normalsize \emph{Le professeur de statistique est strict avec ses élèves.} \LARGE \textbf{''}\normalsize
+\end{quote}
+
+Si le mot cible est « statistique » et si \(w = 2\), alors le contexte qui lui est associé est : \texttt{{[}professeur,\ de,\ est,\ strict{]}}.
+
+Pour ce faire, nous entraînons le réseau de neurones en le nourrissant des paires \texttt{{[}cible,\ contexte{]}}\footnote{Dans notre exemple : \texttt{{[}statistique,\ professeur{]},\ {[}statistique,\ de{]}} \dots} contenues dans les différentes phrases (ici tweets) du corpus afin qu'il puisse déterminer les probabilités d'apparition d'un mot dans le voisinage d'un autre mot (description de l'algorithme précis en partie \ref{sec:skipgram}).
+
+Ainsi, la grande force du modèle d'apprentissage \emph{Word2Vec} est qu'il est « auto-supervisé ». En effet, comme nous avons vu plus haut, le corpus est considéré comme une donnée d'entraînement implicitement supervisée, ce qui nous évite d'avoir à mobiliser des corpus annexes annotés.
+
+\hypertarget{sec:skipgram}{%
+\subsection{L'algorithme Skip-Gram}\label{sec:skipgram}}
+
+L'objectif de cette partie est de décrire le fonctionnement de l'algorithme \emph{Word2Vec}. Deux architectures du modèle existent (voir graphique \ref{fig:cbowskipgram}) :
 
 \begin{itemize}
-\tightlist
 \item
-  L'approche \emph{Continuous bags of words} dont l'objectif est d'estimer la probabilité d'observer un mot, appelé \emph{focus}, sachant que le contexte dans lequel il apparait (i.e. : les mots voisins).\\
+  L'approche \emph{Continuous bags of words} dont l'objectif est d'estimer la probabilité d'observer un mot, appelé \emph{focus}, sachant que le contexte dans lequel il apparait (i.e. : les mots voisins).
 \item
-  L'approche \emph{Skip-gram} a un objectif inverse : estimer, pour chaque mot du vocabulaire, la probabilité d'être proche du mot \emph{focus}. C'est cette approche que nous étudions dans ce projet.
+  L'approche \emph{Skip-gram} a un objectif inverse : estimer, pour chaque mot du vocabulaire, la probabilité d'être proche du mot \emph{focus}.
+  C'est cette approche que nous étudions dans ce projet.
 \end{itemize}
 
 \begin{figure}[htp]
@@ -121,6 +159,8 @@ Deux architectures du modèles \emph{Word2Vec} existent (voir graphique \ref{fig
 %\emph{Note : Paramètres utilisés : ep = 50 / lr = 0,01 / w = 5 / dim = 10.}
 \end{figure}
 
+Dans la suite de ce projet nous noterons \(n\) la taille du vocabulaire (i.e. : le nombre de mots différents). L'approche \emph{Skip-gram} peut être vue comme un réseau de neurone avec trois couches.
+
 \hypertarget{version-softmax}{%
 \subsubsection{Version softmax}\label{version-softmax}}
 
@@ -131,8 +171,8 @@ Décrire les différentes étapes de l'algo (version softmax uniquement) : repre
 
 Réexpliquer l'algo dans sa version negative sampling et faire apparaître les avantages de cette méthode (cf un peu évoqué dans note d'étape).
 
-\hypertarget{uxe9valuation-du-moduxe8le-impluxe9mentuxe9}{%
-\section{Évaluation du modèle implémenté}\label{uxe9valuation-du-moduxe8le-impluxe9mentuxe9}}
+\hypertarget{sec:evaluation}{%
+\section{Évaluation du modèle implémenté}\label{sec:evaluation}}
 
 \hypertarget{sec:commentEvaluer}{%
 \subsection{Comment évaluer le modèle ?}\label{sec:commentEvaluer}}
@@ -545,26 +585,32 @@ l'opération \(\overrightarrow{Paris} - \overrightarrow{France} + \overrightarro
 Les mots en vert correspondent à ceux présents dans l'opération, le mot en rouge le mot que l'on serait supposé trouver et les mots en orange les 10 mots les plus proches du résultat de l'opération vectorielle.}
 \end{figure}
 
-\hypertarget{analyse-des-sentiments}{%
-\section{Analyse des sentiments}\label{analyse-des-sentiments}}
+\hypertarget{sec:sentimentalAnalysis}{%
+\section{Analyse des sentiments}\label{sec:sentimentalAnalysis}}
 
-\hypertarget{description-de-la-muxe9thode-et-tests-partie-ruxe9diguxe9e-par-roro}{%
-\subsection{Description de la méthode et tests {[}Partie rédigée par Roro{]}}\label{description-de-la-muxe9thode-et-tests-partie-ruxe9diguxe9e-par-roro}}
+\hypertarget{description-de-la-muxe9thode-et-tests-roro}{%
+\subsection{Description de la méthode et tests {[}Roro{]}}\label{description-de-la-muxe9thode-et-tests-roro}}
 
 \hypertarget{comparaison-avec-indicateurs-insee}{%
 \subsection{Comparaison avec indicateurs insee}\label{comparaison-avec-indicateurs-insee}}
+
+\hypertarget{conclusion}{%
+\section*{Conclusion}\label{conclusion}}
+\addcontentsline{toc}{section}{Conclusion}
 
 \newpage
 
 \nocite{*}
 
 \begin{thebibliography}{999}
+\bibitem[Bengio \emph{et al} (2003)]{Bengio} Bengio, Y., Ducharme, R., Vincent, P., Janvin, C. (2003). A Neural Probabilistic Language Model. JMLR, 3:1137–1155. \url{https://papers.nips.cc/paper/1839-a-neural-probabilistic-language-model.pdf}.
 \bibitem[Boumedyen Billami \& Gala (2017)]{Boumedyen} Boumedyen Billami, M.,  Gala, N (2017). Création et validation de signatures sémantiques : application à la mesure de similarité sémantique et à la substitution lexicale. TALN 2017. \url{https://hal.archives-ouvertes.fr/hal-01528117/document}.
 \bibitem[Hutter, Hoos \& Leyton-Brown (2014)]{Hutter} Hutter, F., Hoos, H., Leyton-Brown, K., (2014). An Efficient Approach for Assessing Hyperparameter Importance. PMLR 32(1):754-762. \url{http://proceedings.mlr.press/v32/hutter14.pdf}.
+\bibitem[Jurafsky \& Martin (2019)]{Jurafsky} Jurafsky, D., Martin, J. H. (2019). Speech and Language Processing (3rd ed. draft). Prentice Hall. \url{https://web.stanford.edu/~jurafsky/slp3/edbook_oct162019.pdf}.
 \bibitem[Levy \& Golberg (2015)]{Levy} Levy, O., Golberg, Y. (2015). Neural Word Embedding as Implicit Matrix Factorization.
 \url{https://papers.nips.cc/paper/5477-neural-word-embedding-as-implicit-matrix-factorization.pdf}.
 \bibitem[Levy \& Golberg (2014)]{Levy2} Levy, O., Golberg, Y. (2014). Dependency-based word embeddings. ACL. \url{http://papers.nips.cc/paper/5477-neural-word-embedding-as-implicit-matrix-factorization.pdf}.
-\bibitem[Mikolov, Chen, Corrado \emph{et al} (2013)]{Mikolov} Mikolov, T.,  Chen, K., Corrado, G., Dean, J. (2013). Efficient Estimation of Word Representations in Vector Space. arXiv:1301.3781. \url{https://arxiv.org/pdf/1301.3781.pdf}.
+\bibitem[Mikolov \emph{et al} (2013)]{Mikolov} Mikolov, T.,  Chen, K., Corrado, G., Dean, J. (2013). Efficient Estimation of Word Representations in Vector Space. arXiv:1301.3781. \url{https://arxiv.org/pdf/1301.3781.pdf}.
 \bibitem[Pennington, Socher \& Manning (2014)]{Pennington} Pennington, J., Socher, R., Manning, C. D., (2014).  Glove: global vectors for word representation. Proc. of EMNLP,1532 – 1543. \url{https://www.aclweb.org/anthology/D14-1162.pdf}.
 \bibitem[{\v R}eh{\r u}{\v r}ek \& Sojka (2010)]{Rehurek} {\v R}eh{\r u}{\v r}ek, R.,  Sojka, P. (2010). Software Framework for Topic Modelling with Large Corpora. Proceedings of LREC 2010 workshop New Challenges for NLP Frameworks. p. 46--50, 5 pp. ISBN 2-9517408-6-7. \url{https://is.muni.cz/publication/884893/en}.
 \bibitem[Rubenstein \& Goodenough (1965)]{Rubenstein} Rubenstein, H.,  Goodenough, J. B. (1965). Contextual Correlates of Synonymy. Commun. ACM, 8 (10), 627–633. \url{https://dl.acm.org/doi/10.1145/365628.365657}.
